Removing the test page links from the index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,8 +10,8 @@
   <h2>Sprint 46</h2>
   <h3>Example pages</h3>
   <ul>
-    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
-    <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>
+<!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
+    <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
     <li><a href="/v1/d1/warts-and-verrucas">v1 / d1: Warts and verrucas</a></li>
     <li><a href="/v1/d2/warts-and-verrucas">v1 / d2: Warts and verrucas</a></li>
 
