New style results pageand journey tweaks

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -24,6 +24,7 @@
 @import "modules/banner/notification";
 @import "modules/controls/breadcrumbs";
 @import "modules/controls/buttons";
+@import "modules/controls/backlinks";
 @import "modules/data/table";
 @import "modules/disclosure/details";
 @import "modules/footer-global/footer";
