New style results pageand journey tweaks

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,18 +8,18 @@
 
 {% block content %}
   <h2>Sprint 46</h2>
-  <h3>See and find a GP journey</h3>
+  <h3>Find and see a GP journey</h3>
   <ul>
 <!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
     <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
     <li><a href="/v1/d1/warts-and-verrucas">v1 / d1: Warts and verrucas</a> </li>
     <li><a href="/v1/d2/warts-and-verrucas">v1 / d2: Warts and verrucas</a></li>
   </ul>
-  <h3>See and find a GP journey</h3>
+  <h3>Find a pharmacy that will help my condition journey</h3>
   <ul>
 <!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
     <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
-    <li><a href="/v1/d1/head-lice">v1 / d1</a></li>
+    <li><a href="/v1/d1/head-lice">v1 / d1: Head lice</a></li>
   </ul>
 
 {% endblock %}
