End of sprint tidy up

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,10 +17,14 @@
   </ul>
   <h3>Find a pharmacy that will help my condition journey</h3>
   <ul>
-<!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
-    <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
     <li><a href="/v1/d1/head-lice">v1 / d1: Head lice</a></li>
+    <li><a href="/v1/d2/head-lice">v1 / d2: Head lice</a></li>
   </ul>
+
+    <h3>Symptoms and conditions index</h3>
+    <ul>
+      <li><a href="/v1/d2/index">v1 / d2: Symptoms and condition index</a></li>
+    </ul>
 
 {% endblock %}
 
