--- a/app/views/v1/d2/confirm-your-id.html
+++ b/app/views/v1/d2/confirm-your-id.html
@@ -7,7 +7,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 
 {% block pageTitle %}
-Confirm your identity
+Find your GP
 {% endblock %}
 
 {% block pageIntro %}
