End of sprint tidy up

--- a/app/views/v1/d2/index.html
+++ b/app/views/v1/d2/index.html
@@ -2,9 +2,9 @@
 
 {% block page_title %}Index : {{serviceName}}{% endblock %}
 
-{% block pageTitle %}Symptoms and conditions{% endblock %}
+{% block pageTitle %}Symptoms and conditions / v1d1{% endblock %}
 
-{% block pageIntro %}These is the design work for the Connecting to Services{% endblock%}
+{% block pageIntro %}These is the design work for the Connecting to Services programme{% endblock%}
 
 {% block content %}
 
