End of sprint tidy up

--- a/app/views/v1/d2/index.html
+++ b/app/views/v1/d2/index.html
@@ -2,16 +2,16 @@
 
 {% block page_title %}Index : {{serviceName}}{% endblock %}
 
-{% block pageTitle %}Symptoms and conditions / v1d1{% endblock %}
+{% block pageTitle %}Symptoms and conditions / v1d2{% endblock %}
 
 {% block pageIntro %}These is the design work for the Connecting to Services programme{% endblock%}
 
 {% block content %}
 
 <ul>
-  <li><a href="head-lice">Head lice</a> </li>
-  <li><a href="stomach-ache">Stomach ache</a> </li>
-  <li><a href="warts-and-verrucas">Warts and verrucas</a></li>
+  <li><a href="head-lice">Head lice</a> (a pharmacy has the things to help you)</li>
+  <li><a href="stomach-ache">Stomach ache</a> (supposedly a pharmacy but I haven't put the link in yet)</li>
+  <li><a href="warts-and-verrucas">Warts and verrucas</a> (a GP will be able to help you here)</li>
 </ul>
 
 {% endblock %}
