End of day push

--- a/app/assets/sass/modules/callouts/_callouts.scss
+++ b/app/assets/sass/modules/callouts/_callouts.scss
@@ -26,6 +26,8 @@
 .muted {
   background-color: #d9e1e2;
   padding: $leading $leading $leading $leading*2;
+  border-left: solid 6px $black;
+
 }
 
 
