--- a/app/views/v1/d2/show-list-of-pharmacies.html
+++ b/app/views/v1/d2/show-list-of-pharmacies.html
@@ -7,7 +7,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 
 {% block pageTitle %}
-Pharmacies near LS6 4JN {{ postCode }}
+<!--Pharmacies near LS6 4JN {{ postCode }}-->
 {% endblock %}
 
 {% block pageIntro %}
@@ -18,15 +18,43 @@ Pharmacies near LS6 4JN {{ postCode }}
 {% block content %}
 
 
-<div style="background: #0072C6; width: 277px; float: left; padding: 32px; color:#ffffff">
-<h2>Open pharmacies</h2>
+<div style="background: #0072C6; padding: 32px; color:#ffffff;">
+<h2>Pharmacy nearest to LS6 4JN open now</h2>
 <hr style="color: #338ED1; margin-top:48px; margin-bottom: 16px;">
-<p>These NHS services can help you now.</p>
+
+<div class="grid-row">
+<div class="grid-2-3" style="margin-left: -16px;">
+
+
+<p>0.2 miles away<br />
+  <h2 style="margin-top:-48px;">LloydsPharmacy</h2></p>
+
+  <p style="border-left: #000000 solid 4px; color: #000000; background: #ccc; padding: 16px; margin-top:0;">Open from 7.30am until 5.30pm today</p>
+
+
+  <p style="margin-top:0;"><!--<div class="hidden">Address</div>-->569-571 Meanwood Road,<br />
+Leeds,<br />
+LS6 4AY</p>
+
+
+<p style="margin-top: -32px;"><a  style="color: #ffffff" href="https://www.google.com/maps?saddr=LS6+4JN&daddr=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY&near=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY">See map and directions</a></p>
+
+<p style="margin-top: 0;">Phone 0113 278 6352</p>
+
+
+</div>
 </div>
 
+</div>
 
-<div style="padding-left: 364px;">
-<p>0 miles away<br />
+<br />
+
+<div class="grid-row">
+<div class="grid-2-3">
+
+<h2>Next closest pharmacies to LS6 4JN</h3>
+
+<p>0.4 miles away<br />
   <h2 style="margin-top:-48px;">LloydsPharmacy</h2></p>
 
   <p style="border-left: #000000 solid 4px; background: #ccc; padding: 16px; margin-top:0;">Open from 7.30am until 5.30pm today</p>
@@ -44,7 +72,7 @@ LS6 4AY</p>
 
 <hr style="margin-bottom:64px;">
 
-<p>0.5 miles away<br />
+<p>0.7 miles away<br />
   <h2 style="margin-top:-48px;">Meanwood Pharmacy</h2></p>
 
   <p style="border-left: #000000 solid 4px; background: #ccc; padding: 16px; margin-top:0;">Open from 8am until 6pm today</p>
@@ -62,7 +90,7 @@ LS6 4AY</p>
 
 <hr style="margin-bottom:64px;">
 
-<p>0.6 miles away<br />
+<p>1.3 miles away<br />
   <h2 style="margin-top:-48px;">Headingley Pharmacy</h2></p>
 
   <p style="border-left: #000000 solid 4px; background: #ccc; padding: 16px; margin-top:0;">Open from 7am until 6pm today</p>
@@ -101,19 +129,13 @@ LS6 2UE</p>
 
 
 
-</div>
-
-<div style="background: #0072C6; width: 277px; float: left; padding: 32px; color:#ffffff">
-<h2>Closed pharmacies</h2>
-<hr style="color: #338ED1; margin-top:48px; margin-bottom: 16px;">
-</div>
 
 
-<div style="padding-left: 364px;">
 <p>0.9 miles away<br />
   <h2 style="margin-top:-48px;">Knights Scott Hall Pharmacy</h2></p>
 
-  <p style="border-left: #000000 solid 4px; background: #ccc; padding: 16px; margin-top:0;">Open next tomorrow from 7.30am until 5.30pm</p>
+  <p style="border-left: #000000 solid 4px; background: #ccc; padding: 16px; margin-top:0;">Currently closed.<br />
+    Next open tomorrow from 7.30am until 5.30pm</p>
 
 
   <p style="margin-top:0;"><!--<div class="hidden">Address</div>-->Rutland Lodge,<br />
@@ -130,10 +152,12 @@ LS7 3DR</p>
 <p>&nbsp;</p>
 
 
-</div>
-
 
 <p><a href="something-is-wrong">Is something wrong with this page?</a></p>
+
+</div>
+</div>
+
 
 
 
