--- a/app/views/v1/d2/find-a-pharmacy.html
+++ b/app/views/v1/d2/find-a-pharmacy.html
@@ -26,9 +26,9 @@ Find a pharmacy
   </div>
 </fieldset>
 
-<button type="submit" class="button" style="margin-top: 16px; margin-bottom: 0;">Search</button>
+<button type="submit" class="button" style="margin-top: 0; margin-bottom: 0;">Search</button>
 
-<p style="margin-top: 0;"><a href="#" class="link-back">Back to information on head lice</a></p>
+<p style="margin-top: 0;"><a href="head-lice" class="link-back">Back to information on head lice</a></p>
 
 
 </form>
