--- a/app/views/v1/d2/show-list-of-pharmacies.html
+++ b/app/views/v1/d2/show-list-of-pharmacies.html
@@ -17,7 +17,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 {% block content %}
 
-<p style="margin: 0;"><a href="find-a-pharmacy" class="link-back">Back to enter a postcode</a></p>
+<p style="margin: 0; margin-top: -32px;"><a href="find-a-pharmacy" class="link-back">Back to enter a postcode</a></p>
 
 
 <div style="background: #0072C6; padding: 32px; color:#ffffff;">
