End of day push

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -26,6 +26,7 @@
 @import "modules/controls/buttons";
 @import "modules/controls/backlinks";
 @import "modules/data/table";
+@import "modules/data/services_results_table";
 @import "modules/disclosure/details";
 @import "modules/footer-global/footer";
 @import "modules/forms/date";
