--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,7 @@
 
     <h3>Symptoms and conditions index</h3>
     <ul>
+      <li><a href="/v1/d2/choose-journey">v1 / d2: Choose and start journey</a></li>
       <li><a href="/v1/d2/index">v1 / d2: Symptoms and condition index</a></li>
     </ul>
 
