--- a/app/views/v1/d2/book-an-appointment-online.html
+++ b/app/views/v1/d2/book-an-appointment-online.html
@@ -8,7 +8,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 {% block pageTitle %}
 Book an appointment online
-for Idle Medical Practice
+for {{ GPsurgeryName }}
 {% endblock %}
 
 {% block pageIntro %}
