--- a/app/views/v1/d2/head-lice.html
+++ b/app/views/v1/d2/head-lice.html
@@ -30,7 +30,7 @@ Head lice and nits are very common in young children. They don’t have anything
 eggs. You can do this by combing their hair with a special fine-toothed
 comb (detection comb). You can buy these online or at pharmacies.</p>
 
-<div class="muted"><a href="find-a-pharmacy">Find a pharmacy near you</a></div>
+<div class="muted"><a href="find-a-service?condition=head_lice">Find a pharmacy near you</a></div>
 
 <h2>How to get rid of headlice</h2>
 
