--- a/app/views/v1/d2/show-list-of-pharmacies-with-full-times-v3.html
+++ b/app/views/v1/d2/show-list-of-pharmacies-with-full-times-v3.html
@@ -20,28 +20,79 @@ Stomach ache symptoms and conditions - NHS.UK
 <div style="margin: 0; padding-bottom: 8px; margin-top: 0;"><a href="find-a-pharmacy" class="link-back" style="margin: 0;">Back to enter a postcode</a></div>
 
 
-<div style="background: #0072C6; padding: 32px; color:#ffffff;">
-<h2>Pharmacy nearest to LS6 4JN open now</h2>
-<hr style="color: #338ED1; margin-top:48px; margin-bottom: 16px;">
+<div style="border: #0072C6 solid 16px; color:#000000;">
+  <div style="background: #0072C6; padding: 16px 0 32px 16px; color: #ffffff;">
 
+<h2>Pharmacy nearest to LS6 4JN open now</h2>
+</div>
 <div class="grid-row">
-<div class="grid-2-3" style="margin-left: -8px;">
+<div class="grid-2-3" style="margin-left: -8px; padding: 32px; ">
 
 
 <p>0.2 miles away<br />
   <h2 style="margin-top:-48px;">LloydsPharmacy</h2></p>
 
-  <p style="border-left: #000 solid 4px; color: #000000; background: #ccc; padding: 16px; margin-top:0;">Open from 7.30am until 5.30pm today</p>
+  <div style="border-left: #000 solid 4px; color: #000000; background: #ccc; padding: 16px; margin-top:0;">Open from 7.30am until 5.30pm today<br />
+    <details style="margin-top: 0;margin-bottom: 0;">
+
+      <summary><span class="nearest_opening_times">View all opening times</span></summary>
+
+      <div class="panel panel-border-narrow">
 
 
-  <p style="margin-top:0;"><!--<div class="hidden">Address</div>-->569-571 Meanwood Road<br />
+        <table class="gpOpeningTimes">
+            <tbody>
+                <tr>
+                    <td>Monday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Tuesday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Wednesday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Thursday</td>
+                    <td>8.30am to 1pm</td>
+                    <td>3.15pm to 6pm</td>
+                </tr>
+                <tr>
+                    <td>Friday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td>Closed</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>Closed</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
+      </div>
+
+    </details>
+  </div>
+
+  <div style="margin-top:16px;"><!--<div class="hidden">Address</div>-->569-571 Meanwood Road<br />
 Leeds<br />
-LS6 4AY</p>
+LS6 4AY</div>
 
 
-<p style="margin-top: -32px; margin-top: -24px;"><a  style="color: #ffffff" href="https://www.google.com/maps?saddr=LS6+4JN&daddr=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY&near=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY">See map and directions</a></p>
+<div style="margin-top: 0; "><a  style="color: #ffffff" href="https://www.google.com/maps?saddr=LS6+4JN&daddr=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY&near=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY">See map and directions</a></div>
 
-<p style="margin-top: 0;">Phone 0113 278 6352</p>
+<div style="margin-top: 16px;">Phone 0113 278 6352</div>
 
 
 </div>
@@ -52,7 +103,7 @@ LS6 4AY</p>
 <br />
 
 <div class="grid-row">
-<div class="grid-2-3">
+<div class="grid-2-3" style="margin-left: -16px;">
 
 <h2>Next closest pharmacies to LS6 4JN</h3>
 
