--- a/app/views/v1/d2/index.html
+++ b/app/views/v1/d2/index.html
@@ -9,9 +9,11 @@
 {% block content %}
 
 <ul>
-  <li><a href="head-lice">Head lice</a> (a pharmacy has the things to help you)</li>
-  <li><a href="stomach-ache">Stomach ache</a> (supposedly a pharmacy but I haven't put the link in yet)</li>
-  <li><a href="warts-and-verrucas">Warts and verrucas</a> (a GP will be able to help you here)</li>
+  <li><a href="diabetes">Diabetes</a> (see a GP)</li>
+  <li><a href="head-lice">Head lice</a> (go to a pharmacy)</li>
+  <li><a href="stomach-ache">Stomach ache</a> (pharmacy, walk-in centre, and GP)</li>
+  <li><a href="warts-and-verrucas">Warts and verrucas</a> (pharmacy, GP, walk-in centre, urgent care centre)<br />
+  Also contains gential warts which go to sexual health clinic as well</li>
 </ul>
 
 {% endblock %}
