--- a/app/views/v1/d2/show-list-of-pharmacies-with-full-times.html
+++ b/app/views/v1/d2/show-list-of-pharmacies-with-full-times.html
@@ -31,17 +31,67 @@ Stomach ache symptoms and conditions - NHS.UK
 <p>0.2 miles away<br />
   <h2 style="margin-top:-48px;">LloydsPharmacy</h2></p>
 
-  <p style="border-left: #000 solid 4px; color: #000000; background: #ccc; padding: 16px; margin-top:0;">Open from 7.30am until 5.30pm today</p>
+  <div style="border-left: #000 solid 4px; color: #000000; background: #ccc; padding: 16px; margin-top:0;">Open from 7.30am until 5.30pm today<br />
+    <details style="margin-top: 0;margin-bottom: 0;">
+
+      <summary><span class="nearest_opening_times">View all opening times</span></summary>
+
+      <div class="panel panel-border-narrow">
 
 
-  <p style="margin-top:0;"><!--<div class="hidden">Address</div>-->569-571 Meanwood Road<br />
+        <table class="gpOpeningTimes">
+            <tbody>
+                <tr>
+                    <td>Monday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Tuesday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Wednesday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Thursday</td>
+                    <td>8.30am to 1pm</td>
+                    <td>3.15pm to 6pm</td>
+                </tr>
+                <tr>
+                    <td>Friday</td>
+                    <td>8.30am to 6pm</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td>Closed</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>Closed</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
+      </div>
+
+    </details>
+  </div>
+
+  <div style="margin-top:16px;"><!--<div class="hidden">Address</div>-->569-571 Meanwood Road<br />
 Leeds<br />
-LS6 4AY</p>
+LS6 4AY</div>
 
 
-<p style="margin-top: -32px; margin-top: -24px;"><a  style="color: #ffffff" href="https://www.google.com/maps?saddr=LS6+4JN&daddr=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY&near=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY">See map and directions</a></p>
+<div style="margin-top: 0; "><a  style="color: #ffffff" href="https://www.google.com/maps?saddr=LS6+4JN&daddr=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY&near=LloydsPharmacy,569-571+Meanwood+Road,Leeds,Leeds,West+Yorkshire,LS6+4AY">See map and directions</a></div>
 
-<p style="margin-top: 0;">Phone 0113 278 6352</p>
+<div style="margin-top: 16px;">Phone 0113 278 6352</div>
 
 
 </div>
