--- a/app/views/v1/d2/stomach-ache.html
+++ b/app/views/v1/d2/stomach-ache.html
@@ -27,6 +27,8 @@ Most stomach aches aren’t anything serious and will go away after a few days.
 <li>constipation (can’t poo)</li>
 </ul>
 
+<div class="muted"><a href="find-a-service?condition=stomach_ache">Find a pharmacy near you</a></div>
+
 <p>There are also things you can do yourself to <a href="http://www.nhs.uk/Conditions/Indigestion/Pages/Treatment.aspx">help ease indigestion</a>
 and <a href="http://www.nhs.uk/Conditions/Constipation/Pages/Treatment.aspx">constipation.</a></p>
 
@@ -55,21 +57,19 @@ and <a href="http://www.nhs.uk/Conditions/Constipation/Pages/Treatment.aspx">con
 
 {% block emergencyContent %}
 
-<h2>Emergency content</h2>
-
-<p>If you have a hernia and:</p>
+<h2>Call 999 or go to A&amp;E if you</h2>
 
 <ul>
-<li>it feels hot</li>
-<li>it’s hard and tender</li>
-<li>it’s suddenly painful</li>
-<li>you have a fever</li>
-<li>you have blood in your poo</li>
+<li>have sudden, severe stomach pain</li>
+<li>have pain when you touch your stomach</li>
+<li>are vomiting blood or a ground coffee like substance</li>
+<li>have bloody or black, sticky poo</li>
+<li>have collapsed</li>
+<li>can’t breathe</li>
+<li>are unable to pee</li>
+<li>are diabetic and vomiting</li>
 </ul>
 
-<hr>
-
-<p>This could mean you have a strangulated hernia.</p>
 
 
 {% endblock%}
