--- a/app/views/v1/d2/warts-and-verrucas.html
+++ b/app/views/v1/d2/warts-and-verrucas.html
@@ -29,12 +29,12 @@ within 2 years.</p>
 <p>Warts don’t cause you any harm. They might itch or bleed but it doesn’t
 mean there’s a problem.</p>
 
-<p>If you are unsure or worried about a growth on your skin you should <a href="see-a-gp">see
+<p>If you are unsure or worried about a growth on your skin you should <a href="find-a-service?condition=warts_and_veruccas">see
 a GP</a>.</p>
 
 <section class="callout">
 <p>Warts on your vulva, penis or anus are <a href="http://www.nhs.uk/Conditions/Genital_warts/Pages/Introduction.aspx">genital warts</a>
-and need treatment. Go to a sexual health clinic or <a href="see-a-gp">see a GP</a>.</p>
+and need treatment. Go to <a href="find-a-service?condition=genital_warts">a sexual health clinic or see a GP</a>.</p>
 </section>
 
 <h2>Treating warts that are bothering you</h2>
