Added in GP journey

--- a/app/views/v1/d2/diabetes.html
+++ b/app/views/v1/d2/diabetes.html
@@ -18,8 +18,9 @@ Diabetes
 {% block content %}
 
 
-<p><a href="find-a-service?condition=diabetes">See your GP</a> if you have any of the symptoms of type 2 diabetes, or you’re worried you may have a higher risk of developing it.</p>
+<!--<p><a href="find-a-service?condition=diabetes">See your GP</a> if you have any of the symptoms of type 2 diabetes, or you’re worried you may have a higher risk of developing it.</p>-->
 
+<p><a href="see-a-gp">See your GP</a> if you have any of the symptoms of type 2 diabetes, or you’re worried you may have a higher risk of developing it.</p>
 
 
 
