--- a/app/views/v1/d2/find-a-gp.html
+++ b/app/views/v1/d2/find-a-gp.html
@@ -24,7 +24,7 @@ Find a GP
 
 </form>
 
-<p><a href="show-list-of-gps" class="button">Continue</a></p>
+<p><a href="show-list-of-services?postcode=&condition=&conditionName=head+lice&servicePharmacy=&serviceGP=true&serviceWalkInCentre=&serviceSexualHealthClinic=" class="button">Continue</a></p>
 
 <p style="top-margin:16px;">
   Not know your GP? <a href="find-your-gp">Find your GP</a>.
