--- a/app/views/v1/d2/show-list-of-services.html
+++ b/app/views/v1/d2/show-list-of-services.html
@@ -52,7 +52,7 @@ Pharmacy nearest to LS6 4JN open now
 {% if condition == 'genital_warts' %}
 NHS help near to {{ postcode }} for genital warts
 {% else %}
-  {{ servicesToDisplay }} nearest to {{ postcode }} open now
+  {{ servicesToDisplay }} nearest {{ postcode }} open now
 {% endif %}
 </h2>
 </div>
