--- a/app/views/v1/d2/diabetes-2.html
+++ b/app/views/v1/d2/diabetes-2.html
@@ -20,11 +20,12 @@ Diabetes
 
 <!--<p><a href="find-a-service?condition=diabetes">See your GP</a> if you have any of the symptoms of type 2 diabetes, or you’re worried you may have a higher risk of developing it.</p>-->
 
-<p>See a GP if you have any of the symptoms of type 2 diabetes, or you’re worried you may have a higher risk of developing it.</p>
+<p>Type 2 diabetes is often diagnosed following blood or urine tests for something else.</p>
 
-<div class="muted"><a href="TO THE PROTOTYPE">Find a GP and register with one</a>.</div>
+<p>However, if you have any symptoms of diabetes you should see your GP straight away.</p>
 
-<p><a href="diabetes-2">Page 2</a></p>
+<div class="muted"><a href="see-a-gp-diabetes">Book an appointment with your GP online</a>.</div>
+
 
 {% endblock %}
 
