Maps geo updated

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,16 @@
 {% block pageIntro %}These is the design work for the Connecting to a GP digital service{% endblock%}
 
 {% block content %}
-  <h2>Sprint 46</h2>
+<h2>v2</h2>
+<h3>Find and see a GP journey</h3>
+<ul>
+<!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
+  <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
+  <li><a href="/v2/">List of conditions</a> </li>
+</ul>
+
+
+  <h2>v1</h2>
   <h3>Find and see a GP journey</h3>
   <ul>
 <!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
@@ -21,11 +30,11 @@
     <li><a href="/v1/d2/head-lice">v1 / d2: Head lice</a></li>
   </ul>
 
-    <h3>Symptoms and conditions index</h3>
-    <ul>
-      <li><a href="/v1/d2/choose-journey">v1 / d2: Choose and start journey</a></li>
-      <li><a href="/v1/d2/index">v1 / d2: Symptoms and condition index</a></li>
-    </ul>
+  <h3>Symptoms and conditions index</h3>
+  <ul>
+    <li><a href="/v1/d2/choose-journey">v1 / d2: Choose and start journey</a></li>
+    <li><a href="/v1/d2/index">v1 / d2: Symptoms and condition index</a></li>
+  </ul>
 
 {% endblock %}
 
