Changes to See A GP journey

--- a/app/views/v2/book-an-appointment-online.html
+++ b/app/views/v2/book-an-appointment-online.html
@@ -7,7 +7,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 
 {% block pageTitle %}
-Book an appointment online
+Book an appointment with a GP
 for {{ GPsurgeryName }}
 {% endblock %}
 
@@ -20,12 +20,21 @@ for {{ GPsurgeryName }}
 
 <p>This GP practice uses a system that is not controlled by the NHS called TPP SystmOnline.</p>
 
-<p>To book an appointment online you will need to have registered to use the system. You will need your username and password to book an appointment.</p>
+<p>To book an appointment online you will need to have registered to use the system.</p>
+
+<p class="info-panel">If you have not registered to use your GP's online service you will need to make an appointment with this GP practice.<br />
+<a href="">View GP's contac details</a></p>
+
+
+<p>You will need:</p>
+
+<ul>
+  <li>your username</li>
+    <li>your password</li>
+</ul>
 
 <p><a href="https://systmonline.tpp-uk.com/2/Login?Date=20161114231637" class="button">Continue to this surgery's system</a>
 
-
-<p class="info-panel">If you have not registered you will need to make an appointment with this GP practice.</p>
 
 {% endblock %}
 
