--- a/app/views/v2/see-a-gp.html
+++ b/app/views/v2/see-a-gp.html
@@ -19,13 +19,17 @@ See a GP
 
 
 
-<p>A GP can treat warts. They will treat this as a non-emergency. You may have to wait up to a month to receive treatment.</p>
+<p>To book an appointment with your GP online you must already be registered with a GP surgery.</p>
 
-<section class="info-panel">You must be registered with a GP for this treatment. If you can are not registered with a GP <a href="">you can register now</a>.
-</section>
+<p>You will need to tell us:</p>
 
+<ul>
+  <li>your full name</li>
+  <li>your date of birth</li>
+  <li>the postcode you used to register with your GP</li>
+</ul>
 
-<p><a href="find-a-gp" class="button">Book an appointment with a GP</a></p>
+<p><a href="find-a-gp" class="button">Start</a></p>
 
 <p style="top-margin:16px;">
   Not know your GP? <a href="find-your-gp">Find your GP</a>.
