--- a/app/views/v2/warts-and-verrucas.html
+++ b/app/views/v2/warts-and-verrucas.html
@@ -29,7 +29,7 @@ within 2 years.</p>
 <p>Warts don’t cause you any harm. They might itch or bleed but it doesn’t
 mean there’s a problem.</p>
 
-<p>If you are unsure or worried about a growth on your skin you should <a href="find-a-service?condition=warts_and_veruccas">see
+<p>If you are unsure or worried about a growth on your skin you should <a href="see-a-gp">see
 a GP</a>.</p>
 
 <section class="callout">
