Changes to See A GP about diabetes journey

--- a/app/views/v2/diabetes-v2.html
+++ b/app/views/v2/diabetes-v2.html
@@ -49,7 +49,7 @@ your GP surgery.</p>
 <p>The earlier diabetes is diagnosed and treatment starts, the better. Treating
 diabetes early reduces your risk of <a href="health-problems">other health problems.</a></p>
 
-<div class="muted"><a href="make-an-appointment-with-your-gp-for-diabetes">Make an appointment with your GP</a>.</div>
+<div class="muted"><a href="make-an-appointment-with-your-gp-for-diabetes-v2">Book an appointment with a GP</a>.</div>
 
 
 
