--- a/app/views/v2/make-an-appointment-with-your-gp-for-diabetes-v2.html
+++ b/app/views/v2/make-an-appointment-with-your-gp-for-diabetes-v2.html
@@ -7,7 +7,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 
 {% block pageTitle %}
-Find a GP practice
+Make an apppointment with your GP
 {% endblock %}
 
 {% block pageIntro %}
@@ -24,7 +24,7 @@ Find a GP practice
 
 </form>
 
-<p><a href="show-list-of-services?postcode=&condition=&conditionName=head+lice&servicePharmacy=&serviceGP=true&serviceWalkInCentre=&serviceSexualHealthClinic=" class="button">Continue</a></p>
+<p><a href="gp-details-for-diabetes" class="button">Continue</a></p>
 
 <p style="top-margin:16px;">
   Not registered with a GP? <a href="{{ registerGPURL }}">Register with one</a>.
