--- a/app/views/v2/make-an-appointment-with-your-gp.html
+++ b/app/views/v2/make-an-appointment-with-your-gp.html
@@ -7,7 +7,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 
 {% block pageTitle %}
-Find a GP practice
+Make an apppointment with your GP
 {% endblock %}
 
 {% block pageIntro %}
