--- a/app/views/v2/index.html
+++ b/app/views/v2/index.html
@@ -9,6 +9,17 @@
 {% block content %}
 
 <ul>
+  <li><a href="google-search?searchTerm=pharmacies">'Pharmacies'</a> into Google search</li>
+  <li><a href="google-search?searchTerm=pharmacies near LS1">'Pharmacies near LS1'</a> into Google search</li>
+  <li>'[pharmacy name]' into Google search</li>
+  <li><a href="google-search?searchTerm=GP">'GP'</a> into Google search</li>
+  <li><a href="google-search?searchTerm=diabetes">'diabetes'</a> into Google search</li>
+  <li><a href="google-search?searchTerm=head lice">'Head lice'</a> into Google search</li>
+  <li><a href="google-search?searchTerm=stomach ache">'Stomach ache'</a> into Google search</li>
+  <li><a href="google-search?searchTerm=warts">'warts'</a> into Google search</li>
+  <li><a href="google-search?searchTerm=verrucas">'verrucas'</a> into Google search</li>
+</ul>
+<ul>
   <li><a href="diabetes">Diabetes</a> (see a GP)</li>
   <li><a href="head-lice">Head lice</a> (go to a pharmacy)</li>
   <li><a href="stomach-ache">Stomach ache</a> (pharmacy, walk-in centre, and GP)</li>
