--- a/app/views/v2/warts-and-verrucas.html
+++ b/app/views/v2/warts-and-verrucas.html
@@ -29,8 +29,8 @@ within 2 years.</p>
 <p>Warts don’t cause you any harm. They might itch or bleed but it doesn’t
 mean there’s a problem.</p>
 
-<p>If you are unsure or worried about a growth on your skin you should <a href="see-a-gp">see
-a GP</a>.</p>
+<p>If you are unsure or worried about a growth on your skin you should see
+a GP.</p>
 
 <section class="callout">
 <p>Warts on your vulva, penis or anus are <a href="http://www.nhs.uk/Conditions/Genital_warts/Pages/Introduction.aspx">genital warts</a>
