--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -43,3 +43,14 @@
 
 // Callouts
 @import "modules/callouts/callouts";
+@import "modules/journeys/typography";
+
+
+// Hit in additons
+.link_reverse-polarity {
+  color: #ffffff;
+}
+
+.link_reverse-polarity:visited {
+  color: #ffffff;
+}
