--- a/app/views/v2/diabetes-2.html
+++ b/app/views/v2/diabetes-2.html
@@ -23,7 +23,8 @@ Section nav
 something else.</p>
 <p>However, if you have any <a href="check-if-you-have-it">symptoms of diabetes</a> you
 should see your GP straight away.</p>
-<div class="muted"><a href="see-a-gp">Book an appointment with your GP online</a>.</div>
+
+<div class="muted"><a href="book-an-appointment?serviceprovider=GP">Book an appointment with a GP</a></div>
 
 <p>To find out if you have type 2 diabetes, you usually have to go through the
 following steps:</p>
