--- a/app/views/v2/diabetes.html
+++ b/app/views/v2/diabetes.html
@@ -11,7 +11,123 @@ Type 2 diabetes
 {% endblock %}
 
 {% block pageIntro %}
-Section nav
+<nav role="navigation" aria-label="Parts to this guide" class="link-list__row">
+
+
+
+ <ol class="link-list  link-list--one-half link-list--numbered" start="1">
+
+
+
+
+     <li class="link-list--item is-active">
+
+         Check if you have it
+
+     </li>
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="getting-diagnosed"
+            class="link_reverse-polarity"
+            title="Part 2: Getting diagnosed"
+            data-analytics="contents-navigation"
+            data-step="2">
+           Getting diagnosed
+         </a>
+
+     </li>
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="understanding-medication"
+            class="link_reverse-polarity"
+            title="Part 3: Understanding medication"
+            data-analytics="contents-navigation"
+            data-step="3">
+           Understanding medication
+         </a>
+
+     </li>
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="going-for-regular-check-ups"
+            class="link_reverse-polarity"
+            title="Part 4: Going for regular check ups"
+            data-analytics="contents-navigation"
+            data-step="4">
+           Going for regular check ups
+         </a>
+
+     </li>
+
+ </ol>
+
+
+
+
+
+ <ol class="link-list  link-list--one-half link-list--numbered" start="5">
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="health-problems"
+            class="link_reverse-polarity"
+            title="Part 5: Health problems"
+            data-analytics="contents-navigation"
+            data-step="5">
+           Health problems
+         </a>
+
+     </li>
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="food-and-keeping-active"
+            class="link_reverse-polarity"
+            title="Part 6: Food and keeping active"
+            data-analytics="contents-navigation"
+            data-step="6">
+           Food and keeping active
+         </a>
+
+     </li>
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="finding-help-and-support"
+            class="link_reverse-polarity"
+            title="Part 7: Finding help and support"
+            data-analytics="contents-navigation"
+            data-step="7">
+           Finding help and support
+         </a>
+
+     </li>
+
+ </ol>
+
+ </nav>
+
 {% endblock %}
 
 
@@ -49,7 +165,7 @@ your GP surgery.</p>
 <p>The earlier diabetes is diagnosed and treatment starts, the better. Treating
 diabetes early reduces your risk of <a href="health-problems">other health problems.</a></p>
 
-<div class="muted"><a href="make-an-appointment-with-your-gp-for-diabetes">Make an appointment with your GP</a>.</div>
+<div class="muted"><a href="book-an-appointment?serviceprovider=GP">Book an appointment with a GP</a></div>
 
 
 
