--- a/app/views/v2/book-an-appointment.html
+++ b/app/views/v2/book-an-appointment.html
@@ -7,7 +7,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 
 {% block pageTitle %}
-Make an apppointment with your GP
+Book an appointment with a GP
 {% endblock %}
 
 {% block pageIntro %}
@@ -16,18 +16,25 @@ Make an apppointment with your GP
 
 
 {% block content %}
-<p>Enter the name or address of a GP practice, or the name of the doctor you are registered with.</p>
+
+<h2  class="h3">If you already have a GP</h2>
+
+
+<p>Enter the name of your GP practice to find out how you can book an appointment.</p>
 
 <form>
 
 <input type="text" size="30">
 
-</form>
-
 <p><a href="gp-details-for-diabetes" class="button">Continue</a></p>
 
+</form>
+
+
+
 <p style="top-margin:16px;">
-  Not registered with a GP? <a href="{{ registerGPURL }}">Register with one</a>.
+  <b>If you haven't got a GP</b><br />
+  <a href="find-a-service?serviceprovider=GP">Find a GP in your area</a>
 </p>
 
 
