--- a/app/views/v2/book-appointment-details.html
+++ b/app/views/v2/book-appointment-details.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/journey_layout_2-3.html' %}
+{% extends '_layouts/layout_2-3.html' %}
 
 
 {% block page_title %}
@@ -80,11 +80,12 @@ Open from 7.30am until 5.30pm today</p>
 
 <h2 style="margin-top:32px;">Book an appointment online</h2>
 
-<p>Log on with the username and password your GP practice gave you for online services.</p>
+<p>To book an appointment online you need to have a username and password from your GP practice.
 
-<p>If you don't have a username and password, ask your practice for a registration form.</p>
 
 <p><a href="https://systmonline.tpp-uk.com/2/Login?Date=20161114231637" class="button">Start</a>
+
+  <p  class="muted">If you don't have a username and password, ask your practice for a registration form.</p>
 
 
 
