--- a/app/views/v2/gp-details-for-diabetes-v5.html
+++ b/app/views/v2/gp-details-for-diabetes-v5.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/journey_layout_2-3.html' %}
+{% extends '_layouts/layout_2-3.html' %}
 
 
 {% block page_title %}
@@ -80,12 +80,31 @@ Open from 7.30am until 5.30pm today</p>
 
 <h2 style="margin-top:32px;">Book an appointment online</h2>
 
-<p>Log on with the username and password your GP practice gave you for online services.</p>
+<p>To book an appointment online, you need to:</p>
 
-<p>If you don't have a username and password, ask your practice for a registration form.</p>
+<ul>
+<li>register with your GP’s online services</li>
+<li>log on with the username and password your practice gives you</li>
+</ul>
 
-<p><a href="https://systmonline.tpp-uk.com/2/Login?Date=20161114231637" class="button">Start</a>
+<p><a href="https://systmonline.tpp-uk.com/2/Login?Date=20161114231637" class="button">Log on</a>
 
+  <details style="margin-top: 0;margin-bottom: 0;">
+
+    <summary><span class="nearest_opening_times">Register with your GP’s online services</span></summary>
+
+    <div class="panel panel-border-narrow">
+
+      <p>You must register with your GP’s online services to book an appointment online.</p>
+
+      <p>Ask your practice for a registration form.</p>
+
+      <p>You’ll also need to show photo ID and proof of address.</p>
+
+
+    </div>
+
+  </details>
 
 
 {% endblock %}
