--- a/app/views/_layouts/layout_2-3_no_title_block.html
+++ b/app/views/_layouts/layout_2-3_no_title_block.html
@@ -9,8 +9,8 @@
     {% block html_head %}{% endblock %}
   </head>
 
-  <body class="{% block body_css_classes %}{% endblock %}">
-    <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+
+  <body class="">
 
     {% include '_includes/service-alert.html' %}
 
