--- a/app/views/v2/book-an-appointment-draft.html
+++ b/app/views/v2/book-an-appointment-draft.html
@@ -17,6 +17,7 @@ Book an appointment with a GP
 
 {% block content %}
 
+Random content
 
 <script>
   var lookupURL = 'https://gp-lookup-demo.herokuapp.com';
