--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -3,8 +3,8 @@
 @import "tools/tints";
 
 @import "variables/colours";
-@import "variables/frutiger";
-//@import "variables/fs-me";
+// @import "variables/frutiger";
+@import "variables/sans-serif";
 
 //Typopgraphy
 @import "modules/typography/base";
