--- a/app/views/v2/gp-details.html
+++ b/app/views/v2/gp-details.html
@@ -95,7 +95,7 @@ Book an appointment at Street Lane Practice
 {% block emergencyContent %}
 
 
-{% endblock%}
+{% endblock%}§
 
 {% block mutedCallout%}
 
