--- a/app/assets/sass/modules/typography/_headings.scss
+++ b/app/assets/sass/modules/typography/_headings.scss
@@ -23,3 +23,13 @@ h5 a,
 h6 a {
   text-decoration: none;
 }
+
+.journey h1 {
+  font: 24px;
+  line-height: 30px;
+}
+
+.journey h2 {
+  line-height: 32px;
+  font-size: 16px;
+}
