--- a/app/views/v2/gp-details.html
+++ b/app/views/v2/gp-details.html
@@ -19,7 +19,7 @@ Book an appointment at Street Lane Practice
 
 <h2>Contact reception</h2>
 
-<div>Telephone: 0113 237 1128</div>
+<p>Telephone: 0113 237 1128</p>
 
 
 <p><b>Reception opening hours</b><br />
