--- a/app/views/v2/gp-details.html
+++ b/app/views/v2/gp-details.html
@@ -85,7 +85,9 @@ Book an appointment at Street Lane Practice
 
 <p>If you don't have a username and password, ask your practice for a registration form.</p>
 
-<p><a href="https://systmonline.tpp-uk.com/2/Login?PracticeId=B86066&Date=20170124091633" class="button">Start</a>
+<p><a href="https://systmonline.tpp-uk.com/2/Login?PracticeId=B86066&Date=20170124091633" class="button">Start</a><br />
+  <div style="font-size: 16px">(On the surgery's website.)</div>
+</p>
 
 
 
