Meanwood surgery changes ahead of research session

--- a/app/views/v2/book-an-appointment.html
+++ b/app/views/v2/book-an-appointment.html
@@ -2,7 +2,7 @@
 
 
 {% block page_title %}
-Stomach ache symptoms and conditions - NHS.UK
+Book an appointment - NHS.UK
 {% endblock %}
 
 
@@ -16,8 +16,6 @@ Book an appointment with a GP
 
 
 {% block content %}
-
-More random content
 
 <script>
   var lookupURL = '/data/';
