--- a/app/views/v2/diabetes.html
+++ b/app/views/v2/diabetes.html
@@ -22,7 +22,7 @@ Type 2 diabetes
 
      <li class="link-list--item is-active">
 
-         Check if you have it
+         Check if you have do not it
 
      </li>
 
