--- a/app/views/v2/gp-details_street-lane.html
+++ b/app/views/v2/gp-details_street-lane.html
@@ -7,7 +7,7 @@ GP details NHS.UK
 
 
 {% block pageTitle %}
-Book an appointment at Meanwood Group Practice
+Book an appointment at Street Lane Practice
 {% endblock %}
 
 {% block pageIntro %}
@@ -19,13 +19,16 @@ Book an appointment at Meanwood Group Practice
 
 <h2>Contact reception</h2>
 
+<p>Telephone: 0113 237 1128</p>
+
+
 <p><b>Reception opening hours</b><br />
-Open from 7.30am to 8pm today
+<div class="muted">Currently open, from 8.30am until 6.30pm today</div>
 </p>
 
 <details style="margin-top: 0;margin-bottom: 0;">
 
-<summary><span class="nearest_opening_times">View all opening times</span></summary>
+  <summary><span class="nearest_opening_times">View all opening times</span></summary>
 
   <div class="panel panel-border-narrow">
 
@@ -34,32 +37,38 @@ Open from 7.30am to 8pm today
         <tbody>
             <tr>
                 <td>Monday</td>
-                <td>7.30am to 8pm</td>
+                <td>8.30am to 6pm</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Tuesday</td>
-                <td>7.30am to 6pm</td>
+                <td>8.30am to 6pm</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Wednesday</td>
-                <td>7.30am to 6pm</td>
+                <td>8.30am to 6pm</td>
                 <td></td>
             </tr>
             <tr>
                 <td>Thursday</td>
-                <td>7.30am to 6pm</td>
+                <td>8.30am to 1pm</td>
+                <td>3.15pm to 6pm</td>
             </tr>
             <tr>
                 <td>Friday</td>
-                <td>7.30am to 6pm</td>
+                <td>8.30am to 6pm</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Saturday</td>
-                <td>Closed - call 111 if you need help</td>
+                <td>Closed</td>
+                <td></td>
             </tr>
             <tr>
                 <td>Sunday</td>
-                <td>Closed - call 111 if you need help</td>
+                <td>Closed</td>
+                <td></td>
             </tr>
         </tbody>
     </table>
@@ -68,18 +77,17 @@ Open from 7.30am to 8pm today
 
 </details>
 
-<p class="muted">Telephone:  0113 230 5055</p>
 
 
 <h2 style="margin-top:32px;">Book an appointment online</h2>
 
-<p>To book an appointment online, you need to register with the practice’s online services website.</p>
+<p>Log on with the username and password your GP practice gave you for online services.</p>
 
-<p>You can get a registration form from reception.</p>
+<p>If you don't have a username and password, ask your practice for a registration form.</p>
 
-<p>The practice will send you a username and password for the site.</p>
-
-<p class="muted"><a href="https://systmonline.tpp-uk.com/2/Login?PracticeId=B86066&Date=20170124091633" style="margin-bottom: 0px;">Sign into the online services website</a>
+<p><a href="https://systmonline.tpp-uk.com/2/Login?PracticeId=B86066&Date=20170124091633" class="button" style="margin-bottom: 0px;">Start</a>
+  <br />
+  <div style="font-size: 16px; margin-top: -32px;">(On the surgery's website.)</div>
 </p>
 
 
