--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -33,7 +33,7 @@ we can add other blues, named like blue40 (for a lighter blue) or blue60 for a d
 16px
 */
 body, pre.user-input {
-  font-family: "Helvetica", "Arial" sans-serif;
+  font-family: "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 32px;
